--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,5 @@
 body {
-  min-width: 1128px;
+  max-width: 1440px;
   margin: 0 auto;
   padding: 24px;
 }
@@ -31,5 +31,6 @@ ul {
   background: rgba(46, 47, 66, 0.8);
   display: flex;
   flex-direction: column;
+  justify-content: center;
   align-items: center;
 }
